--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                 </div>
 
-<div class="messagebar">
+<div class="messagebar-default">
     <div class="container">
       This is a notification. You can click it away if you want.
       <button type="button" class="close" data-dismiss="message">&times;</button>
@@ -64,7 +64,7 @@
     <script src="dist/jquery.messagebar.min.js"></script>
     
     <script>
-$(".messagebar").messageBar({
+$(".messagebar-default").messageBar({
   slide: false
 });</script>
 
