--- a/index.html
+++ b/index.html
@@ -142,35 +142,42 @@
                 </div>
 
 
-                <h1 class="facebookname">Facebook</h1>
+                <div class="facebook-widget">
+                        <h1 class="facebookname">Facebook</h1>
 
 
-                <h1 class="facebookstats">8,739</h1>
-                <svg class="facebookbox" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <svg x="10">
-                <rect height="100" style="fill: #f2f2f2; stroke-width:1;stroke:rgb(0,0,0)" width="250" x="10" y="10">
-                </rect></svg> <svg x="20">
-                <circle cx="50" cy="60" fill="#7477bf" r="40" stroke stroke-width>
-                </circle></svg></svg> <svg class="facebook" enable-background="new 0 0 56.693 56.693" fill="#fff" height="56.693px" id="Layer_2" version="1.1" viewbox="0 0 56.693 56.693" width=
-                "56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <path d=
-                "M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029 c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77 L40.43,21.739z">
+                        <h1 class="facebookstats">8,739</h1>
+                        <svg class="facebookbox" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <svg x="10">
+                        <rect height="100" style="fill: #f2f2f2; stroke-width:1;stroke:rgb(0,0,0)" width="250" x="10" y="10">
+                        </rect></svg> <svg x="20">
+                        <circle cx="50" cy="60" fill="#7477bf" r="40" stroke stroke-width>
+                        </circle></svg></svg> <svg class="facebook" enable-background="new 0 0 56.693 56.693" fill="#fff" height="56.693px" id="Layer_2" version="1.1" viewbox="0 0 56.693 56.693"
+                        width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <path d=
+                        "M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029 c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77 L40.43,21.739z">
 
-                </path></svg> <svg class="googlebox" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <svg x="10">
-                <rect height="100" style="fill: #f2f2f2; stroke-width:1;stroke:rgb(0,0,0)" width="250" x="10" y="10">
-                </rect></svg> <svg x="20">
-                <circle cx="50" cy="60" fill="#7477bf" r="40" stroke stroke-width>
-                </circle></svg></svg>
-
-                <h1 class="googlename">Google+</h1>
+                        </path></svg>
+                </div>
 
 
-                <h1 class="googlestats">2,530</h1>
-                <svg class="google" fill="#fff" id="Layer_3" style="enable-background:new 0 0 32 32;" version="1.1" viewbox="0 0 32 32" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
-                <path d=
-                "M17.7,25.7c0-0.3,0-0.5-0.1-0.8c-0.1-0.2-0.1-0.5-0.2-0.7c-0.1-0.2-0.2-0.4-0.3-0.7c-0.2-0.2-0.3-0.4-0.4-0.6 c-0.1-0.2-0.3-0.3-0.5-0.6c-0.2-0.2-0.4-0.4-0.5-0.5c-0.1-0.1-0.3-0.3-0.6-0.5c-0.3-0.2-0.5-0.4-0.6-0.4s-0.3-0.2-0.6-0.4 c-0.3-0.2-0.5-0.4-0.6-0.4c-0.2,0-0.5,0-1,0c-0.7,0-1.4,0-2,0.1c-0.7,0.1-1.4,0.2-2.1,0.5c-0.7,0.2-1.3,0.5-1.9,0.9s-1,0.8-1.3,1.4 c-0.3,0.6-0.5,1.3-0.5,2.1c0,0.9,0.2,1.7,0.7,2.3c0.5,0.7,1.1,1.2,1.8,1.6s1.5,0.7,2.3,0.9s1.6,0.3,2.4,0.3c0.8,0,1.5-0.1,2.2-0.2 c0.7-0.2,1.3-0.4,1.9-0.8c0.6-0.3,1.1-0.8,1.4-1.4C17.5,27.2,17.7,26.5,17.7,25.7z M15.4,9.1c0-0.8-0.1-1.6-0.3-2.5 c-0.2-0.9-0.5-1.7-0.9-2.5c-0.4-0.8-0.9-1.5-1.6-2c-0.7-0.5-1.5-0.8-2.3-0.8c-1.2,0-2.1,0.4-2.8,1.3c-0.7,0.9-1,1.9-1,3.2 c0,0.6,0.1,1.2,0.2,1.9c0.1,0.7,0.4,1.3,0.7,2c0.3,0.7,0.7,1.3,1.1,1.8c0.4,0.5,0.9,1,1.5,1.3c0.6,0.3,1.2,0.5,1.9,0.5 c1.2,0,2.1-0.4,2.7-1.2C15.1,11.4,15.4,10.4,15.4,9.1z M12.9,0h8.4l-2.6,1.5h-2.6c0.9,0.6,1.6,1.4,2.1,2.4s0.8,2.1,0.8,3.2 c0,0.9-0.1,1.8-0.4,2.5c-0.3,0.7-0.7,1.3-1.1,1.8c-0.4,0.4-0.8,0.9-1.3,1.2c-0.4,0.4-0.8,0.8-1.1,1.2c-0.3,0.4-0.4,0.8-0.4,1.3 c0,0.3,0.1,0.7,0.3,1c0.2,0.3,0.5,0.6,0.8,0.9c0.3,0.3,0.7,0.6,1.1,0.9c0.4,0.3,0.8,0.7,1.2,1.1c0.4,0.4,0.8,0.8,1.1,1.3 c0.3,0.5,0.6,1,0.8,1.6c0.2,0.6,0.3,1.3,0.3,2c0,2.1-0.9,3.9-2.7,5.4c-1.9,1.7-4.6,2.5-8.1,2.5c-0.8,0-1.5-0.1-2.3-0.2 c-0.8-0.1-1.6-0.3-2.3-0.6c-0.8-0.3-1.5-0.7-2.1-1.1c-0.6-0.4-1.1-1-1.5-1.7C1,27.6,0.8,26.9,0.8,26c0-0.8,0.2-1.6,0.7-2.6 c0.4-0.8,1-1.5,1.8-2.1c0.8-0.6,1.8-1.1,2.8-1.4c1-0.3,2-0.5,3-0.7c0.9-0.1,1.9-0.2,2.9-0.3c-0.8-1.1-1.2-2-1.2-2.9 c0-0.2,0-0.3,0-0.5c0-0.1,0.1-0.3,0.1-0.4c0-0.1,0.1-0.2,0.2-0.4c0.1-0.2,0.1-0.3,0.1-0.4c-0.5,0.1-1,0.1-1.3,0.1 c-1.9,0-3.5-0.6-4.9-1.9c-1.4-1.3-2-2.8-2-4.7c0-1.8,0.6-3.4,1.8-4.8C6,1.7,7.5,0.8,9.3,0.4C10.5,0.1,11.7,0,12.9,0z M32.8,4.9v2.5 h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z">
+                <div class="google-widget">
+                        <svg class="googlebox" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><svg x="10">
+                        <rect height="100" style="fill: #f2f2f2; stroke-width:1;stroke:rgb(0,0,0)" width="250" x="10" y="10">
+                        </rect></svg> <svg x="20">
+                        <circle cx="50" cy="60" fill="#7477bf" r="40" stroke stroke-width>
+                        </circle></svg></svg>
 
-                </path></svg> <!-- Members Data and Activity -->
+                        <h1 class="googlename">Google+</h1>
+
+
+                        <h1 class="googlestats">2,530</h1>
+                        <svg class="google" fill="#fff" id="Layer_3" style="enable-background:new 0 0 32 32;" version="1.1" viewbox="0 0 32 32" x="0px" xml:space="preserve" xmlns=
+                        "http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+                        <path d=
+                        "M17.7,25.7c0-0.3,0-0.5-0.1-0.8c-0.1-0.2-0.1-0.5-0.2-0.7c-0.1-0.2-0.2-0.4-0.3-0.7c-0.2-0.2-0.3-0.4-0.4-0.6 c-0.1-0.2-0.3-0.3-0.5-0.6c-0.2-0.2-0.4-0.4-0.5-0.5c-0.1-0.1-0.3-0.3-0.6-0.5c-0.3-0.2-0.5-0.4-0.6-0.4s-0.3-0.2-0.6-0.4 c-0.3-0.2-0.5-0.4-0.6-0.4c-0.2,0-0.5,0-1,0c-0.7,0-1.4,0-2,0.1c-0.7,0.1-1.4,0.2-2.1,0.5c-0.7,0.2-1.3,0.5-1.9,0.9s-1,0.8-1.3,1.4 c-0.3,0.6-0.5,1.3-0.5,2.1c0,0.9,0.2,1.7,0.7,2.3c0.5,0.7,1.1,1.2,1.8,1.6s1.5,0.7,2.3,0.9s1.6,0.3,2.4,0.3c0.8,0,1.5-0.1,2.2-0.2 c0.7-0.2,1.3-0.4,1.9-0.8c0.6-0.3,1.1-0.8,1.4-1.4C17.5,27.2,17.7,26.5,17.7,25.7z M15.4,9.1c0-0.8-0.1-1.6-0.3-2.5 c-0.2-0.9-0.5-1.7-0.9-2.5c-0.4-0.8-0.9-1.5-1.6-2c-0.7-0.5-1.5-0.8-2.3-0.8c-1.2,0-2.1,0.4-2.8,1.3c-0.7,0.9-1,1.9-1,3.2 c0,0.6,0.1,1.2,0.2,1.9c0.1,0.7,0.4,1.3,0.7,2c0.3,0.7,0.7,1.3,1.1,1.8c0.4,0.5,0.9,1,1.5,1.3c0.6,0.3,1.2,0.5,1.9,0.5 c1.2,0,2.1-0.4,2.7-1.2C15.1,11.4,15.4,10.4,15.4,9.1z M12.9,0h8.4l-2.6,1.5h-2.6c0.9,0.6,1.6,1.4,2.1,2.4s0.8,2.1,0.8,3.2 c0,0.9-0.1,1.8-0.4,2.5c-0.3,0.7-0.7,1.3-1.1,1.8c-0.4,0.4-0.8,0.9-1.3,1.2c-0.4,0.4-0.8,0.8-1.1,1.2c-0.3,0.4-0.4,0.8-0.4,1.3 c0,0.3,0.1,0.7,0.3,1c0.2,0.3,0.5,0.6,0.8,0.9c0.3,0.3,0.7,0.6,1.1,0.9c0.4,0.3,0.8,0.7,1.2,1.1c0.4,0.4,0.8,0.8,1.1,1.3 c0.3,0.5,0.6,1,0.8,1.6c0.2,0.6,0.3,1.3,0.3,2c0,2.1-0.9,3.9-2.7,5.4c-1.9,1.7-4.6,2.5-8.1,2.5c-0.8,0-1.5-0.1-2.3-0.2 c-0.8-0.1-1.6-0.3-2.3-0.6c-0.8-0.3-1.5-0.7-2.1-1.1c-0.6-0.4-1.1-1-1.5-1.7C1,27.6,0.8,26.9,0.8,26c0-0.8,0.2-1.6,0.7-2.6 c0.4-0.8,1-1.5,1.8-2.1c0.8-0.6,1.8-1.1,2.8-1.4c1-0.3,2-0.5,3-0.7c0.9-0.1,1.9-0.2,2.9-0.3c-0.8-1.1-1.2-2-1.2-2.9 c0-0.2,0-0.3,0-0.5c0-0.1,0.1-0.3,0.1-0.4c0-0.1,0.1-0.2,0.2-0.4c0.1-0.2,0.1-0.3,0.1-0.4c-0.5,0.1-1,0.1-1.3,0.1 c-1.9,0-3.5-0.6-4.9-1.9c-1.4-1.3-2-2.8-2-4.7c0-1.8,0.6-3.4,1.8-4.8C6,1.7,7.5,0.8,9.3,0.4C10.5,0.1,11.7,0,12.9,0z M32.8,4.9v2.5 h-4.9v4.9h-2.5V7.4h-4.9V4.9h4.9V0h2.5v4.9H32.8z">
+
+                        </path></svg> <!-- Members Data and Activity -->
+                </div>
         </div>
 
 
@@ -337,157 +344,159 @@
         <!-- SETTINGS -->
 
 
-        <h1 class="settings">SETTINGS</h1>
+        <div class="settings-container">
+                <h1 class="settings">SETTINGS</h1>
 
 
-        <div class="email-settings">
-                <span class="notitoggle">Send E-mail Notifications</span>
+                <div class="email-settings">
+                        <span class="notitoggle">Send E-mail Notifications</span>
 
-                <div class="input-toggle">
-                        <label class="label label-toggle" for="email"><input class="input-checkbox" id="email" type="checkbox"> <span class="input-toggle-handle"></span></label>
+                        <div class="input-toggle">
+                                <label class="label label-toggle" for="email"><input class="input-checkbox" id="email" type="checkbox"> <span class="input-toggle-handle"></span></label>
+                        </div>
                 </div>
-        </div>
 
 
-        <div class="profile-settings">
-                <span class="profiletoggle">Set Profile to Public</span>
+                <div class="profile-settings">
+                        <span class="profiletoggle">Set Profile to Public</span>
 
-                <div class="input-toggle">
-                        <label class="label label-toggle" for="profile"><input class="input-checkbox" id="profile" type="checkbox"> <span class="input-toggle-handle"></span></label>
+                        <div class="input-toggle">
+                                <label class="label label-toggle" for="profile"><input class="input-checkbox" id="profile" type="checkbox"> <span class="input-toggle-handle"></span></label>
+                        </div>
                 </div>
-        </div>
-        <select id="DropDownTimezone" name="DropDownTimezone">
-                <option value="-13.0">
-                        Select TimeZone
-                </option>
+                <select id="DropDownTimezone" name="DropDownTimezone">
+                        <option value="-13.0">
+                                Select TimeZone
+                        </option>
 
-                <option value="-12.0">
-                        (GMT -12:00) Eniwetok, Kwajalein
-                </option>
+                        <option value="-12.0">
+                                (GMT -12:00) Eniwetok, Kwajalein
+                        </option>
 
-                <option value="-11.0">
-                        (GMT -11:00) Midway Island, Samoa
-                </option>
+                        <option value="-11.0">
+                                (GMT -11:00) Midway Island, Samoa
+                        </option>
 
-                <option value="-10.0">
-                        (GMT -10:00) Hawaii
-                </option>
+                        <option value="-10.0">
+                                (GMT -10:00) Hawaii
+                        </option>
 
-                <option value="-9.0">
-                        (GMT -9:00) Alaska
-                </option>
+                        <option value="-9.0">
+                                (GMT -9:00) Alaska
+                        </option>
 
-                <option value="-8.0">
-                        (GMT -8:00) Pacific Time (US &amp; Canada)
-                </option>
+                        <option value="-8.0">
+                                (GMT -8:00) Pacific Time (US &amp; Canada)
+                        </option>
 
-                <option value="-7.0">
-                        (GMT -7:00) Mountain Time (US &amp; Canada)
-                </option>
+                        <option value="-7.0">
+                                (GMT -7:00) Mountain Time (US &amp; Canada)
+                        </option>
 
-                <option value="-6.0">
-                        (GMT -6:00) Central Time (US &amp; Canada), Mexico City
-                </option>
+                        <option value="-6.0">
+                                (GMT -6:00) Central Time (US &amp; Canada), Mexico City
+                        </option>
 
-                <option value="-5.0">
-                        (GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima
-                </option>
+                        <option value="-5.0">
+                                (GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima
+                        </option>
 
-                <option value="-4.0">
-                        (GMT -4:00) Atlantic Time (Canada), Caracas, La Paz
-                </option>
+                        <option value="-4.0">
+                                (GMT -4:00) Atlantic Time (Canada), Caracas, La Paz
+                        </option>
 
-                <option value="-3.5">
-                        (GMT -3:30) Newfoundland
-                </option>
+                        <option value="-3.5">
+                                (GMT -3:30) Newfoundland
+                        </option>
 
-                <option value="-3.0">
-                        (GMT -3:00) Brazil, Buenos Aires, Georgetown
-                </option>
+                        <option value="-3.0">
+                                (GMT -3:00) Brazil, Buenos Aires, Georgetown
+                        </option>
 
-                <option value="-2.0">
-                        (GMT -2:00) Mid-Atlantic
-                </option>
+                        <option value="-2.0">
+                                (GMT -2:00) Mid-Atlantic
+                        </option>
 
-                <option value="-1.0">
-                        (GMT -1:00 hour) Azores, Cape Verde Islands
-                </option>
+                        <option value="-1.0">
+                                (GMT -1:00 hour) Azores, Cape Verde Islands
+                        </option>
 
-                <option value="0.0">
-                        (GMT) Western Europe Time, London, Lisbon, Casablanca
-                </option>
+                        <option value="0.0">
+                                (GMT) Western Europe Time, London, Lisbon, Casablanca
+                        </option>
 
-                <option value="1.0">
-                        (GMT +1:00 hour) Brussels, Copenhagen, Madrid, Paris
-                </option>
+                        <option value="1.0">
+                                (GMT +1:00 hour) Brussels, Copenhagen, Madrid, Paris
+                        </option>
 
-                <option value="2.0">
-                        (GMT +2:00) Kaliningrad, South Africa
-                </option>
+                        <option value="2.0">
+                                (GMT +2:00) Kaliningrad, South Africa
+                        </option>
 
-                <option value="3.0">
-                        (GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg
-                </option>
+                        <option value="3.0">
+                                (GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg
+                        </option>
 
-                <option value="3.5">
-                        (GMT +3:30) Tehran
-                </option>
+                        <option value="3.5">
+                                (GMT +3:30) Tehran
+                        </option>
 
-                <option value="4.0">
-                        (GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi
-                </option>
+                        <option value="4.0">
+                                (GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi
+                        </option>
 
-                <option value="4.5">
-                        (GMT +4:30) Kabul
-                </option>
+                        <option value="4.5">
+                                (GMT +4:30) Kabul
+                        </option>
 
-                <option value="5.0">
-                        (GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent
-                </option>
+                        <option value="5.0">
+                                (GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent
+                        </option>
 
-                <option value="5.5">
-                        (GMT +5:30) Bombay, Calcutta, Madras, New Delhi
-                </option>
+                        <option value="5.5">
+                                (GMT +5:30) Bombay, Calcutta, Madras, New Delhi
+                        </option>
 
-                <option value="5.75">
-                        (GMT +5:45) Kathmandu
-                </option>
+                        <option value="5.75">
+                                (GMT +5:45) Kathmandu
+                        </option>
 
-                <option value="6.0">
-                        (GMT +6:00) Almaty, Dhaka, Colombo
-                </option>
+                        <option value="6.0">
+                                (GMT +6:00) Almaty, Dhaka, Colombo
+                        </option>
 
-                <option value="7.0">
-                        (GMT +7:00) Bangkok, Hanoi, Jakarta
-                </option>
+                        <option value="7.0">
+                                (GMT +7:00) Bangkok, Hanoi, Jakarta
+                        </option>
 
-                <option value="8.0">
-                        (GMT +8:00) Beijing, Perth, Singapore, Hong Kong
-                </option>
+                        <option value="8.0">
+                                (GMT +8:00) Beijing, Perth, Singapore, Hong Kong
+                        </option>
 
-                <option value="9.0">
-                        (GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk
-                </option>
+                        <option value="9.0">
+                                (GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk
+                        </option>
 
-                <option value="9.5">
-                        (GMT +9:30) Adelaide, Darwin
-                </option>
+                        <option value="9.5">
+                                (GMT +9:30) Adelaide, Darwin
+                        </option>
 
-                <option value="10.0">
-                        (GMT +10:00) Eastern Australia, Guam, Vladivostok
-                </option>
+                        <option value="10.0">
+                                (GMT +10:00) Eastern Australia, Guam, Vladivostok
+                        </option>
 
-                <option value="11.0">
-                        (GMT +11:00) Magadan, Solomon Islands, New Caledonia
-                </option>
+                        <option value="11.0">
+                                (GMT +11:00) Magadan, Solomon Islands, New Caledonia
+                        </option>
 
-                <option value="12.0">
-                        (GMT +12:00) Auckland, Wellington, Fiji, Kamchatka
-                </option>
-        </select>
+                        <option value="12.0">
+                                (GMT +12:00) Auckland, Wellington, Fiji, Kamchatka
+                        </option>
+                </select>
 
-        <div class="buttons">
-                <button class="button button1">SAVE</button> <button class="button button2">CANCEL</button>
+                <div class="buttons">
+                        <button class="button button1">SAVE</button> <button class="button button2">CANCEL</button>
+                </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js">
         </script> 
