aligned traffic navigation

--- a/index.html
+++ b/index.html
@@ -502,6 +502,9 @@
                         <button class="button button1">SAVE</button> <button class="button button2">CANCEL</button>
                 </div>
         </div>
+    
+        <footer class="main-footer"></footer>
+    
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js">
         </script> 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js">
