aligned new members and recent activity

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <!-- Members Data and Activity -->
 
 
-    <div class="flex-container">
+    <div class="new-members">
         <!-- New Members -->
 
 
@@ -220,7 +220,7 @@
 
 
                 <div class="contact-info">
-                    <span class="top-info">Victoria Chambers</span> <span class="bottom-info">victoria.chambers80@example.com</span>
+                    <span class="top-info">Victoria Chambers</span> <span class="bottom-info">victoria@example.com</span>
                 </div>
 
 
@@ -336,7 +336,7 @@
         </div>
     </div>
     <!-- Message User -->
-    <span class="msguser">Message User</span>
+    <h3 class="msguser">Message User</h3>
 
     <div class="container">
         <form class="message-users" id="sendMessage" method="post" name="sendMessage" novalidate="novalidate">
