--- a/index.html
+++ b/index.html
@@ -346,9 +346,8 @@
 
     <!-- Message User -->
 
-
     <div class="contact-form">
-        <h3>Message User</h3>
+       <h3>Message User</h3>
         <form class="message-users" id="sendMessage" method="post" name="sendMessage" novalidate="novalidate">
             <input id="search-user" name="search-user" placeholder="Search for User" type="text">
 
@@ -526,7 +525,7 @@
 
 
     </script>
-    <script src="dist/javascript.js" type="text/javascript">
+    <script src="dist/applications.js" type="text/javascript">
 
 
     </script>
